--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "axios": "^0.27.2",
     "framer-motion": "^6",
     "json-server": "^0.17.0",
     "next": "latest",
